# fighterpilot

./: .clang-format  .gitignore  AABox.cpp  AABox.h  Angle.cpp  Angle.h  CMakeLists.txt  ClassDiagram1.cd  FighterPilot.aps  FighterPilot.rc  FighterPilot.sln  FighterPilot.vcxproj  FighterPilot.vcxproj.filters  FrustumG.cpp  GLee.c  Makefile  OpenGLgraphics.cpp  XboxContInput.h  aaGun.cpp  aaGun.h  angle.cpp  assetLoader.cpp  assetLoader.h  basicMath.h  blackSmoke.cpp  bomb.cpp  bomb.h  bullet.cpp  bullet.h  bulletEffect.cpp  cameraManager.cpp  cameraManager.h  campaign.cpp  collide.cpp  collide.h  contrail.cpp  contrailSmall.cpp  dataManager.cpp  dataManager.h  debrisSmokeTrail.cpp  (+119 more)
04122009/: Map1Properties.ini  keys.cpp  plane.cpp  texture2.h  twoPlayerVs.h
04122009/media2/: altitude.tga  controls select.tga  dial back.tga  fire.tga  grass.tga  join.tga  needle.tga  plane radar.tga  plane.raw  plane2.raw  radar.tga  radar2.tga
branches/fractalTerrain/: CMakeLists.txt  FighterPilot.aps  FighterPilot.sln  FighterPilot.vcxproj  FighterPilot.vcxproj.filters  aaGun.cpp  angle.h  assetLoader.cpp  assetLoader.h  bomb.cpp  bullet.cpp  bulletEffect.cpp  campaign.cpp  contrail.cpp  dataManager.cpp  definitions.h  dogFight.cpp  engine.cpp  explosionFlash2.cpp  explosionSmoke.cpp  explosionSparks.cpp  fileManager.cpp  fileManager.h  fireball.cpp  game.cpp  gameMath.h  graphicsManager.h  groundExplosionFlash.cpp  input.cpp  input.h  level.cpp  level.h  levelEditor.cpp  menuScreen.cpp  menuScreen.h  menus.cpp  menus.h  missile.cpp  objectInfo.cpp  objectList.cpp  (+21 more)
code/: Terain.h  controls.h  entity.h  gameMath.h  geoPlane.h  glew.c  missile.h  obj.h  partical.h  plane.cpp  texture2.h  vec3f.cpp  vec3f.h  world.h
code/04132009/: bullet.h  controls.h  imageloader.cpp  input.h  missile.h  modes.h  onePlayer.h  setControls.h
code/04182009/: ClassDiagram1.cd  FighterPilot.sln  bullet.h  drawing.h  input.h  main.cpp  menu.h  try 14.opt  vec3f.cpp
code/04202009/: keys.h  main.cpp  twoPlayerVs.h
experimental/: CMakeLists.txt  FighterPilot.vcxproj.filters  Thumbs.db  aaGun.h  assetLoader.cpp  assetLoader.h  bomb.h  bullet.cpp  bullet.h  bulletEffect.cpp  campaign.cpp  collide.cpp  controlManager.h  debrisSmokeTrail.cpp  definitions.h  dogFight.cpp  engine.h  explosionFlash.cpp  explosionSmoke.cpp  fireball.cpp  gameMath.h  graphicsManager.h  level.cpp  level.h  levelEditor.cpp  libpng.lib  menuScreen.cpp  menuScreen.h  menus.cpp  menus.h  missile.cpp  object.cpp  objectInfo.cpp  objectInfo.h  objectList.cpp  openGLgraphics.cpp  particleEffects.h  plane.cpp  plane.h  player.cpp  (+7 more)
experimental/media/: assetList.xml  blur.vert  color3D.frag  createTree.geom  cylinder.mtl  desert.frag  farmland.frag  grass.frag  hdrLuminance.frag  health.frag  help.txt  hex grid.frag  island.frag  m3.mtl  map file.lvl  objectData.xml  ocean.frag  ortho.frag  particle3.geom  radar.frag  sky.frag  sphere.mtl  tree3d.frag  treesAlphaTest.frag  waterSimple.frag
levels/Level 2/: mapfile.txt
levels/Level 3/: Thumbs.db  mapfile.txt
media/: AA guns.lvl  AA guns2.lvl  SAM.mtl  additiveParticle.frag  assetList.xml  auxMapGen.frag  bloom.frag  bloom.vert  blur.vert  blurMipmaps.frag  blurX.frag  blurY.frag  button.tga  circle.frag  circle.vert  clipMap.frag  clipMap.vert  colormapGen.frag  colormapGen.vert  createTree.geom  createTreeTexture.geom  createTreeTexture3.frag  decal.frag  decal.vert  desert preview.frag  desert.frag  dome.mtl  dome3.mtl  dome4.mtl  f18hornet.mtl  f18hornet_Cylinder.mmp  f18hornet_Cylinder2.mmp  f22.mtl  flak cannons.lvl  fractalOcean.frag  fractalOcean.vert  fractalSubdivide.frag  fractalSubdivideX.frag  fractalTerrain.frag  fractalTerrain.vert  (+103 more)
media/SAM/: SAM.mtl
media/bunker/: bunker.mtl
media/cooperativeCampaign/: mission1.lvl  mission2.lvl  mission3.lvl  mission4.lvl  mission5.lvl  mission6.lvl  (+1 more)
trunk/: Angle.cpp  Angle.h  Application Data.lnk  CMakeLists.txt  ClassDiagram1.cd  FighterPilot.sln  FighterPilot.vcxproj  FighterPilot.vcxproj.filters  FrustumG.cpp  FrustumG.h  GameMath.cpp  Makefile  OpenGLgraphics.cpp  Terain.h  XboxContInput.h  aaGun.cpp  aaGun.h  assetLoader.cpp  assetLoader.h  basicMath.h  blackSmoke.cpp  bomb.cpp  bomb.h  bullet.cpp  bullet.h  bulletEffect.cpp  cameraManager.h  campaign.cpp  collide.cpp  collide.h  contrail.cpp  contrailSmall.cpp  controlManager.cpp  controls.h  dataManager.cpp  dataManager.h  debrisSmokeTrail.cpp  debug.h  debugBreak.cpp  debugBreak.h  (+111 more)
wiki/: Controls.wiki  Downloads.wiki  Goals.wiki  PageName.wiki  RequestForSource.wiki
(+300 files in other folders)
